2003-09-30  Brian Warner  <warner@lothar.com>

	* twisted/test/test_conch.py (testOurServerOpenSSHClient): replace
	reactor.run() with .iterate calls: when using .run, exceptions in
	the server cause a hang.

2003-9-29  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/tap/procmon.py twisted/plugins.tml: remove procmon
	tap. It was crufty and hard to port properly to new application.

2003-09-29  Brian Warner  <warner@lothar.com>

	* twisted/scripts/trial.py (Options.opt_reactor): make trial
	accept the same reactor-name abbreviations as twistd does. Closes
	issue69.
	(top): add test-case-name tag

	* doc/man/trial.1: document the change

2003-09-28  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.8alpha3.

2003-09-27  Cory Dodt <corydodt@yahoo.com>

	* win32/main.aap win32/pyx.x-foo.iss.template win32/README.win32:
	Be nice to people who don't install Python for "All Users" on win32.

2003-9-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/application/strports.py twisted/test/test_strports.py: 
	New API/mini-language for defining ports

2003-9-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/spider.py: removed, it was unmaintained.

2003-09-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/names/authority.py twisted/test/test_names.py
	twisted/protocols/dns.py: Client and server support for TTLs on
	all records. All Record_* types now take a ttl= keyword
	argument. You can pass the ttl= argument to all the record classes
	in your pyzones, too.

2003-09-19  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/application/__init__.py twisted/application/app.py
        twisted/application/compat.py twisted/application/internet.py
        twisted/application/service.py twisted/scripts/twistd.py
        twisted/scripts/twistw.py twisted/scripts/mktap.py
        twisted/scripts/tapconvert.py bin/twistw: Update to new-style
	applications.

2003-09-19  Jp Calderone  <exarkun@twistedmatrix.com>
